<resources>
    <string name="app_name">BKK</string>

    <!-- Strings related to login -->
    <string name="common_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="common_verification_label_thankyou">"Thank you for registering! We have just send an SMS with a verification code to your provided mobile number. Please enter the verification code to complete your registration process:"</string>
    <string name="common_verification_code">"Verification Code"</string>
    <string name="common_verify">"VERIFY"</string>
    <string name="common_resend">RESEND</string>
    <string name="common_verification">VERIFICATION</string>
    <string name="common_main">MAIN</string>
    <string name="common_msg_error_verification_code_invalid">Your verification code is not valid!</string>
    <string name="common_money_remittance">MONEY REMITTANCE</string>
    <string name="text8">Username</string>
    <string name="text9">Password</string>
    <string name="common_login">LOGIN</string>
    <string name="common_register">REGISTER</string>
    <string name="text12">Invalid login credentials!</string>
    <string name="common_id_number">ID Number (IC/Passport)</string>
    <string name="common_mobile">Mobile</string>
    <string name="common_create_password">Create Password</string>
    <string name="common_confirm_password">Confirm Password</string>
    <string name="common_unmatched_password">Unmatched password</string>
    <string name="text19">There is already an account registered with this details!</string>
    <string name="common_user_profile">USER PROFILE</string>
    <string name="common_update_profile_label_thankyou">Thank you for registering! You are almost done. Please fill up the following information to complete your profile:</string>
    <string name="common_first_name">First Name</string>
    <string name="common_last_name">Last Name</string>
    <string name="common_document_type">Document Type</string>
    <string name="common_document_validity_date">Document Validity Date</string>
    <string name="common_email">Email</string>
    <string name="common_address">Address</string>
    <string name="common_dob">Date Of Birth</string>
    <string name="common_male">Male</string>
    <string name="common_female">Female</string>
    <string name="common_save">SAVE</string>
    <string name="common_cob">Country Of Birth</string>
    <string name="common_pending_warning">Pending Verification!</string>
    <string name="common_pending_warning_content">We could not find your details in our database. For security reasons, please bring your photo ID (IC or Passport) to any BKK counters to verify you account!</string>
    <string name="common_ok">OK</string>
    <string name="dialog_send_verification_code_title">Resend verification code</string>
    <string name="dialog_send_verification_code_msg">SMS message delivery may take up to 5 minutes. Are you sure to get a new verification code (old verification code will be invalidated immediately)?</string>
    <string name="common_cancel">CANCEL</string>
    <string name="common_msg_check_connectivity">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="common_msg_retry">Thử lại</string>
    <string name="common_msg_connection_error">Lỗi kết nối</string>
    <string name="common_bkk_forex">BKK Forex</string>
</resources>
