<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:src="@drawable/img_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/common_bkk_forex"
                android:textColor="@color/tim"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/btnWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/btnMenu"
                android:layout_toStartOf="@+id/btnMenu"
                android:src="@drawable/ic_warning" />

            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_menu" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/copyright"
        android:layout_below="@id/toolbar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/common_user_profile"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/common_update_profile_label_thankyou" />

            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtFirstName"
                    style="@style/EditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_first_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtLastName"
                    style="@style/EditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtId"
                    style="@style/EditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/common_id_number"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtDocumentType"
                    style="@style/EditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_document_type"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/txtDocumentValidityDate"
                        style="@style/EditText_Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/common_document_validity_date"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="0dp"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_date" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtEmail"
                    style="@style/EditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_address"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/Input_Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/txtDateOfBirth"
                        style="@style/EditText_Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/common_dob"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_date" />
            </RelativeLayout>

            <RadioGroup
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_radio_gender"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/common_male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:button="@drawable/selector_radio_gender"
                    android:padding="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/common_female"
                    android:textColor="@color/white" />
            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                style="@style/Input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtCOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/common_cob"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/common_save"
                android:textColor="#323b74"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/copyright"
        layout="@layout/include_copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"></include>
</RelativeLayout>
